--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -11,7 +11,6 @@
   --bs-body-bg: transparent;
   letter-spacing: .022em;
   font-weight: 600;
-  line-height: 1.0834933333;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -20,6 +19,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html, body {
+  overflow-x: hidden;
 }
 
 .text-link {
